--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+FRONTEND_URL=
+SESSION_DOMAIN=
+SANCTUM_STATEFUL_DOMAINS=
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
